<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dan.mathexamapp.MainActivity"
    android:padding="8dp"
    android:background="@drawable/paper">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/red"/>

        <EditText
            android:id="@+id/name_typing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/namehint"
            />
        <EditText
            android:id="@+id/email_typing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/emailhint"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionone"
            android:textSize="25sp"
            android:textColor="@color/red"/>
        <EditText
            android:id="@+id/answer_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questiontwo"
            android:textSize="25sp"
            android:textColor="@color/red"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/answer_two">
            <RadioButton
                android:id="@+id/answer_two_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_two_a"
                android:textSize="25sp"
                />
            <RadioButton
                android:id="@+id/answer_two_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_two_b"
                android:textSize="25sp"/>
        </RadioGroup>
        <TextView
            android:id="@+id/answer_counting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionthree"
            android:textSize="25sp"
            android:textColor="@color/red"/>
        <EditText
            android:id="@+id/answer_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintthree"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/submit"
            android:onClick="submit"
            android:textSize="25dp"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:onClick="send_result"
            android:text="@string/sendResult"
            android:textSize="25dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/before"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp"/>
    </LinearLayout>
</ScrollView>
